[package]
name = "edxlc"
version = "1.0.0"
authors = ["Andrew Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
hotwatch = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"
winapi = "0.3.9"