[package]
name = "edxlc"
version = "1.6.0"
authors = ["Andrew Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
hotwatch = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
libloading = "0.7"
winapi = "0.3.9"
libc = "0.2"
ctrlc = "3.0"
log = "0.4.0"
env_logger = "0.8.3"
toml = "0.5"

[build-dependencies]
embed-resource = "1.6"